--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 <body>
 
 <div class="layout">
+  <!--
   <div class="titulo">Pensamos en los taxistas,</div>
   <div class="titulo">los usuarios y en el planeta.</div>  
+  -->
+  
 </div>
-
-<br>
+<br><br><br>
 
 <div class="layout">
   <div class="centre"><img src="taxi-logo.png" /></div>
 </div>
-	
+<br><br>	
 <div class="layout">
   <div class="centre">
 	<a href="http://app.pidataxi.com/agent/"><img src="es.png" /></a>
+	&nbsp;&nbsp;&nbsp;
     <a href="http://app.pidataxi.com/agent/"><img src="en.png" /></a>
   </div>
 </div>
-
+<br><br>
 <footer>
 	<div class="footer">
         Powered by Good People Technologies - 2013
